fix z-index

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -39,6 +39,11 @@
   --ifm-h1-font-size: 64px;
   --ifm-h2-font-size: 40px;
   --ifm-h3-font-size: 20px;
+
+  --ifm-z-index-dropdown: 10;
+  --ifm-z-index-fixed-mui: 11;
+  --ifm-z-index-fixed: 12;
+  --ifm-z-index-overlay: 14;
 }
 
 html[data-theme='dark'] {
